# minimeili

./: Cargo.toml  README.md
examples/: create.rs  create_name_index.rs  delete.rs  delete_all_names.rs  delete_name_index.rs  delete_names.rs  filtering.rs  index_name.rs  search.rs  search_name.rs  simple.rs  wrapped.rs
src/: client.rs  has_index.rs  index.rs  lib.rs  search.rs  task.rs  task_manager.rs
