[package]
name = "minimeili"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/nicrosengren/minimeili"
documentation = "https://docs.rs/minimeili"
license = "MIT"
readme = "README.md"

description = """
Small subset of the Meilisearch API exposed in a simpler way
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "tokio" ]
tokio = ["dep:tokio"]

[dependencies]
reqwest = { version = "0.12.2", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.115"
thiserror = "1.0.58"

tokio = { optional = true, version = "1.37.0", features = ["time"] }


[dev-dependencies]
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "macros" ] }
