[package]
name = "minimeili"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/nicrosengren/minimeili"
documentation = "https://docs.rs/minimeili"
license = "MIT"
readme = "README.md"

description = """
Small subset of the Meilisearch API implemented a little differently
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "hooks" ]
hooks = [ "tokio" ]
tokio = [ "dep:tokio" ]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"

tokio = { optional = true, version = "1", features = ["time"] }
tracing = "0.1"


[dev-dependencies]
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }
